--- a/frontend/Cadastro/doenca.html
+++ b/frontend/Cadastro/doenca.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="box-nav d-flex justify-between">
                 <div class="filter">
-                    <a href="../main.html"><i class="fas fa-angle-double-left"></i> Inicio</a>
+                    <a href="../main.html"><i class="fas fa-angle-double-left"></i> Início</a>
                 </div>
                 <div class="filter">
                     <a href="../tabelas/doenca.html"></i>Todas as doenças <i class="fas fa-angle-double-right"></i></a>
