--- a/frontend/main.html
+++ b/frontend/main.html
@@ -7,26 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="../frontend/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>API - Defensivos e Doenças</title>
 </head>
 
 <body>
-    <header id="header">
-        <nav>
-            <div class="container">
-                <div class="text-center">
-                    <a href="/frontend/main.html" class="nav-brand text-dark">API D&D</a>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <nav class="navbar navbar-expand-lg bg-body">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="main.html">D&D</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="tabelas/doenca.html">Listagem Doenças</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="tabelas/defensivo.html">Listagem Defensivos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <main>
         <div class="container">
-            <h1>TESTE TESTANDO TESTEI ....</h1>
-            <button class="btn text-dark "><a href="/frontend/Cadastro/doenca.html"
-                    style="text-decoration: none; color: black;">Nova Doença</a></button>
-            <button class="btn text-dark "><a href="/frontend/Cadastro/defensivo.html"
-                    style="text-decoration: none; color: black;">Novo Defensivo</a></button>
+            <a href="/frontend/Cadastro/doenca.html" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="true">Nova Doença</a>
+            <a href="/frontend/Cadastro/defensivo.html" class="btn btn-outline-info" tabindex="-1" role="button" aria-disabled="true">Novo Defensivo</a>
         </div>
     </main>
 
@@ -35,4 +41,6 @@
     </footer>
 </body>
 
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 </html>
